<resources>
    <string name="app_name">drinkUP</string>
    <string name="title_home">Home</string>
    <string name="title_preferiti">Preferiti</string>
    <string name="title_profilo">Profilo</string>
    <string name="title_maps">Maps</string>
    <string name="hint_Search_Drink">Inserisci il nome del drink</string>
    <string name="button_ricerca">Cerca</string>
    <string name="google_maps_key">AIzaSyC6StaSpJBDH-uaHdyj5c7hE8bgfMWbuus</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_precedente">Precedente</string>
    <string name="button_successivo">Successivo</string>
    <string name="nome_Drink">Nome Drink</string>
    <string name="gradazione_Drink">Gradazione</string>
    <string name="ingredienti_Drink">Ingredienti</string>
    <string name="quantitaIngredienti_Drink">Quantità</string>
    <string name="preparazione_Drink">Preparazione</string>
    <string name="hint_Search_Posizione">Inserisci il luogo da cercare</string>
    <string name="hint_Search_Ingredient">Inserisci il nome dell\'ingrediente</string>
    <string name="descrizione_Ingredient">Descrizione</string>
    <string name="alcolico_Ingredient">Alcolico</string>
    <string name="tipo_Ingredient">Tipologia</string>
    <string name="buttonIngredient">WIKI ingredient</string>
    <string name="buttonRandom">Mi sento FORTUNATO</string>
    <string name="buttonDrinkIngredient">Ricerca per INGREDIENTE</string>
    <string name="buttonDrink">Ricerca per NOME</string>

    <string name="mappa_json">
      [
      {
        \"elementType\": \"geometry\",
        \"stylers\": [
          {
            \"color\": \"#ebe3cd\"
          }
        ]
      },
      {
        \"elementType\": \"labels.text.fill\",
        \"stylers\": [
          {
            \"color\": \"#523735\"
          }
        ]
      },
      {
        \"elementType\": \"labels.text.stroke\",
        \"stylers\": [
          {
            \"color\": \"#f5f1e6\"
          }
        ]
      },
      {
        \"featureType\": \"administrative\",
        \"elementType\": \"geometry.stroke\",
        \"stylers\": [
          {
            \"color\": \"#c9b2a6\"
          }
        ]
      },
      {
        \"featureType\": \"administrative.land_parcel\",
        \"elementType\": \"geometry.stroke\",
        \"stylers\": [
          {
            \"color\": \"#dcd2be\"
          }
        ]
      },
      {
        \"featureType\": \"administrative.land_parcel\",
        \"elementType\": \"labels.text.fill\",
        \"stylers\": [
          {
            \"color\": \"#ae9e90\"
          }
        ]
      },
      {
        \"featureType\": \"landscape.natural\",
        \"elementType\": \"geometry\",
        \"stylers\": [
          {
            \"color\": \"#dfd2ae\"
          }
        ]
      },
      {
        \"featureType\": \"poi\",
        \"elementType\": \"geometry\",
        \"stylers\": [
          {
            \"color\": \"#dfd2ae\"
          }
        ]
      },
      {
        \"featureType\": \"poi\",
        \"elementType\": \"labels.text.fill\",
        \"stylers\": [
          {
            \"color\": \"#93817c\"
          }
        ]
      },
      {
        \"featureType\": \"poi.attraction\",
        \"stylers\": [
          {
            \"visibility\": \"off\"
          }
        ]
      },
      {
        \"featureType\": \"poi.business\",
        \"elementType\": \"labels.icon\",
        \"stylers\": [
          {
            \"color\": \"#ec5809\"
          }
        ]
      },
      {
        \"featureType\": \"poi.business\",
        \"elementType\": \"labels.text.fill\",
        \"stylers\": [
          {
            \"color\": \"#ec5809\"
          }
        ]
      },
      {
        \"featureType\": \"poi.government\",
        \"stylers\": [
          {
            \"visibility\": \"off\"
          }
        ]
      },
      {
        \"featureType\": \"poi.medical\",
        \"stylers\": [
          {
            \"visibility\": \"off\"
          }
        ]
      },
      {
        \"featureType\": \"poi.park\",
        \"stylers\": [
          {
            \"visibility\": \"off\"
          }
        ]
      },
      {
        \"featureType\": \"poi.park\",
        \"elementType\": \"geometry.fill\",
        \"stylers\": [
          {
            \"color\": \"#a5b076\"
          },
          {
            \"visibility\": \"off\"
          }
        ]
      },
      {
        \"featureType\": \"poi.park\",
        \"elementType\": \"labels.text.fill\",
        \"stylers\": [
          {
            \"color\": \"#447530\"
          }
        ]
      },
      {
        \"featureType\": \"poi.place_of_worship\",
        \"stylers\": [
          {
            \"visibility\": \"off\"
          }
        ]
      },
      {
        \"featureType\": \"poi.school\",
        \"stylers\": [
          {
            \"visibility\": \"off\"
          }
        ]
      },
      {
        \"featureType\": \"poi.sports_complex\",
        \"stylers\": [
          {
            \"visibility\": \"off\"
          }
        ]
      },
      {
        \"featureType\": \"road\",
        \"elementType\": \"geometry\",
        \"stylers\": [
          {
            \"color\": \"#f5f1e6\"
          }
        ]
      },
      {
        \"featureType\": \"road.arterial\",
        \"elementType\": \"geometry\",
        \"stylers\": [
          {
            \"color\": \"#fdfcf8\"
          }
        ]
      },
      {
        \"featureType\": \"road.highway\",
        \"elementType\": \"geometry\",
        \"stylers\": [
          {
            \"color\": \"#f8c967\"
          }
        ]
      },
      {
        \"featureType\": \"road.highway\",
        \"elementType\": \"geometry.stroke\",
        \"stylers\": [
          {
            \"color\": \"#e9bc62\"
          }
        ]
      },
      {
        \"featureType\": \"road.highway.controlled_access\",
        \"elementType\": \"geometry\",
        \"stylers\": [
          {
            \"color\": \"#e98d58\"
          }
        ]
      },
      {
        \"featureType\": \"road.highway.controlled_access\",
        \"elementType\": \"geometry.stroke\",
        \"stylers\": [
          {
            \"color\": \"#db8555\"
          }
        ]
      },
      {
        \"featureType\": \"road.local\",
        \"elementType\": \"labels.text.fill\",
        \"stylers\": [
          {
            \"color\": \"#806b63\"
          }
        ]
      },
      {
        \"featureType\": \"transit.line\",
        \"elementType\": \"geometry\",
        \"stylers\": [
          {
            \"color\": \"#dfd2ae\"
          }
        ]
      },
      {
        \"featureType\": \"transit.line\",
        \"elementType\": \"labels.text.fill\",
        \"stylers\": [
          {
            \"color\": \"#8f7d77\"
          }
        ]
      },
      {
        \"featureType\": \"transit.line\",
        \"elementType\": \"labels.text.stroke\",
        \"stylers\": [
          {
            \"color\": \"#ebe3cd\"
          }
        ]
      },
      {
        \"featureType\": \"transit.station\",
        \"elementType\": \"geometry\",
        \"stylers\": [
          {
            \"color\": \"#dfd2ae\"
          }
        ]
      },
      {
        \"featureType\": \"transit.station.airport\",
        \"stylers\": [
          {
            \"visibility\": \"off\"
          }
        ]
      },
      {
        \"featureType\": \"transit.station.bus\",
        \"stylers\": [
          {
            \"visibility\": \"off\"
          }
        ]
      },
      {
        \"featureType\": \"transit.station.rail\",
        \"stylers\": [
          {
            \"visibility\": \"off\"
          }
        ]
      },
      {
        \"featureType\": \"water\",
        \"elementType\": \"geometry.fill\",
        \"stylers\": [
          {
            \"color\": \"#b9d3c2\"
          }
        ]
      },
      {
        \"featureType\": \"water\",
        \"elementType\": \"labels.text.fill\",
        \"stylers\": [
          {
            \"color\": \"#92998d\"
          }
        ]
      }
    ]

    </string>

</resources>