<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_preferiti"
        android:icon="@android:drawable/star_big_on"
        android:title="@string/title_preferiti" />

    <item
        android:id="@+id/navigation_profilo"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_profilo" />

    <item
        android:id="@+id/navigation_maps"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/title_maps" />

</menu>