<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.drinkup.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_preferiti"
        android:name="com.example.drinkup.ui.preferiti.PreferitiFragment"
        android:label="@string/title_preferiti"
        tools:layout="@layout/fragment_preferiti" />

    <fragment
        android:id="@+id/navigation_profilo"
        android:name="com.example.drinkup.ui.profilo.ProfiloFragment"
        android:label="@string/title_profilo"
        tools:layout="@layout/fragment_profilo" />

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.example.drinkup.ui.maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps" />
</navigation>