<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imgpsh_fullsize_anim"
    tools:context=".RandomDrink">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/CardView_InfoDrinkR"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@android:color/transparent"
                app:cardBackgroundColor="?android:attr/textColorTertiaryInverse">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        app:cardBackgroundColor="@android:color/transparent"
                        app:cardCornerRadius="0dp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textViewR_Nome_Drink"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.7"
                                android:layout_marginStart="4dp"
                                android:layout_marginLeft="4dp"
                                android:layout_marginEnd="4dp"
                                android:layout_marginRight="4dp"
                                android:fontFamily="@font/hello_avocado"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textColor="#FFCA4700"
                                android:textSize="30sp"
                                android:textStyle="bold" />


                            <ImageButton
                                android:id="@+id/buttonR_Salva_Preferito"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="0.3"
                                android:padding="30dp"
                                android:src="@android:drawable/btn_star_big_off"
                                app:iconSize="15dp" />



                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/textR_Gradazione"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:text="@string/gradazione_Drink"
                        android:textSize="25sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/textViewR_Alchool_Drink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:fontFamily="@font/inter"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="193dp"
                            android:layout_height="match_parent"
                            app:cardBackgroundColor="@android:color/transparent"
                            app:cardCornerRadius="0dp"
                            app:cardElevation="0dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textR_Ingredienti"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="4dp"
                                    android:text="@string/ingredienti_Drink"
                                    android:textSize="25sp"
                                    android:textStyle="bold|italic" />

                                <TextView
                                    android:id="@+id/textViewR_Ingredienti_Drink"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="4dp"
                                    android:layout_marginLeft="4dp"
                                    android:layout_marginEnd="4dp"
                                    android:layout_marginRight="4dp"
                                    android:fontFamily="@font/inter"
                                    android:textColor="@color/black" />
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:cardBackgroundColor="@android:color/transparent"
                            app:cardCornerRadius="0dp"
                            app:cardElevation="0dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textR_Quantita"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/quantitaIngredienti_Drink"
                                    android:textSize="25sp"
                                    android:textStyle="bold|italic" />

                                <TextView
                                    android:id="@+id/textViewR_QuantitaIngredienti_Drink"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="4dp"
                                    android:layout_marginRight="4dp"
                                    android:fontFamily="@font/inter"
                                    android:textColor="@color/black" />
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textR_Preparazione"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:text="@string/preparazione_Drink"
                        android:textSize="25sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/textViewR_Preparazione_Drink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:fontFamily="@font/inter"
                        android:textColor="@color/black" />

                    <ImageView
                        android:id="@+id/imageViewR_Drink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="@android:drawable/screen_background_light_transparent"
                        android:visibility="visible"
                        app:srcCompat="@drawable/image_drink"
                        tools:srcCompat="@drawable/image_drink"
                        tools:visibility="visible" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>